--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -8,7 +8,7 @@ on:
       - "src/**"
       - "test/**"
       - "samples/**"
-concurrency: 
+concurrency:
   group: CosmosDbConnect
   cancel-in-progress: false
 jobs:
@@ -52,7 +52,7 @@ jobs:
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTableDissolvable" "jjga_d_items_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTableDissolvable" "jjga_d_events_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3Region" "us-west-1"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"        
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"
     - name: Restore dependencies
       run: |
         dotnet nuget add source -n benchmarknightly https://www.myget.org/F/benchmarkdotnet/api/v3/index.json
@@ -66,7 +66,7 @@ jobs:
     - name: Test dotnet FeatureCheck .NET9
       run: |
         dotnet test tests/FeatureCheck.Test/FeatureCheck.Test.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net9.0
-      
+
 
   regular80Mixed:
     strategy:
@@ -108,7 +108,7 @@ jobs:
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTableDissolvable" "jjga_d_items_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTableDissolvable" "jjga_d_events_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3Region" "us-west-1"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"        
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"
     - name: Restore dependencies
       run: |
         dotnet nuget add source -n benchmarknightly https://www.myget.org/F/benchmarkdotnet/api/v3/index.json
@@ -116,11 +116,11 @@ jobs:
     - name: Test Build
       run: |
         dotnet build Sekiban.sln -c Release
-      
+
     - name: Test dotnet tests/Mixed.Test
       run: |
         dotnet test tests/Mixed.Test/Mixed.Test.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net8.0
-  
+
 
   regularMultitenant:
     strategy:
@@ -163,7 +163,7 @@ jobs:
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTableDissolvable" "jjga_d_items_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTableDissolvable" "jjga_d_events_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3Region" "us-west-1"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"        
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"
     - name: Restore dependencies
       run: |
         dotnet nuget add source -n benchmarknightly https://www.myget.org/F/benchmarkdotnet/api/v3/index.json
@@ -177,7 +177,7 @@ jobs:
     - name: Test dotnet tests/MultiTenant.AggregateTest .NET9
       run: |
         dotnet test tests/MultiTenant.AggregateTest/MultiTenant.AggregateTest.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net9.0
-        
+
 
   regular80Cosmos:
     strategy:
@@ -220,7 +220,7 @@ jobs:
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTableDissolvable" "jjga_d_items_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTableDissolvable" "jjga_d_events_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3Region" "us-west-1"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"        
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"
     - name: Restore dependencies
       run: |
         dotnet nuget add source -n benchmarknightly https://www.myget.org/F/benchmarkdotnet/api/v3/index.json
@@ -228,7 +228,7 @@ jobs:
     - name: Test Build
       run: |
         dotnet build Sekiban.sln -c Release
-      
+
     - name: Test dotnet tests/Sekiban.Test.CosmosDb
       run: |
         dotnet test tests/Sekiban.Test.CosmosDb/Sekiban.Test.CosmosDb.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net8.0
@@ -275,7 +275,7 @@ jobs:
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTableDissolvable" "jjga_d_items_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTableDissolvable" "jjga_d_events_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3Region" "us-west-1"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"        
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"
     - name: Restore dependencies
       run: |
         dotnet nuget add source -n benchmarknightly https://www.myget.org/F/benchmarkdotnet/api/v3/index.json
@@ -283,7 +283,7 @@ jobs:
     - name: Test Build
       run: |
         dotnet build Sekiban.sln -c Release
-      
+
     - name: Test dotnet tests/Sekiban.Test.CosmosDb
       run: |
         dotnet test tests/Sekiban.Test.CosmosDb/Sekiban.Test.CosmosDb.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net8.0
@@ -331,7 +331,7 @@ jobs:
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTableDissolvable" "jjga_d_items_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTableDissolvable" "jjga_d_events_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3Region" "us-west-1"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"        
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"
     - name: Restore dependencies
       run: |
         dotnet nuget add source -n benchmarknightly https://www.myget.org/F/benchmarkdotnet/api/v3/index.json
@@ -383,7 +383,7 @@ jobs:
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTableDissolvable" "jjga_d_items_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTableDissolvable" "jjga_d_events_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3Region" "us-west-1"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"        
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"
     - name: Restore dependencies
       run: |
         dotnet nuget add source -n benchmarknightly https://www.myget.org/F/benchmarkdotnet/api/v3/index.json
@@ -391,14 +391,14 @@ jobs:
     - name: Test Build
       run: |
         dotnet build Sekiban.sln -c Release
-      
+
     - name: Test dotnet tests/Sekiban.Test.Dynamo .NET8
       run: |
         dotnet test tests/Sekiban.Test.Dynamo/Sekiban.Test.Dynamo.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net8.0
     - name: Test dotnet tests/Sekiban.Test.Dynamo .NET9
       run: |
         dotnet test tests/Sekiban.Test.Dynamo/Sekiban.Test.Dynamo.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net9.0
-  
+
   regularPostgres:
     strategy:
       max-parallel: 4
@@ -439,7 +439,7 @@ jobs:
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTableDissolvable" "jjga_d_items_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTableDissolvable" "jjga_d_events_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3Region" "us-west-1"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"        
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"
     - name: Restore dependencies
       run: |
         dotnet nuget add source -n benchmarknightly https://www.myget.org/F/benchmarkdotnet/api/v3/index.json
@@ -447,20 +447,49 @@ jobs:
     - name: Test Build
       run: |
         dotnet build Sekiban.sln -c Release
-      
+
     - name: Test dotnet tests/Sekiban.Test.Postgres .NET8
       run: |
         dotnet test tests/Sekiban.Test.Postgres/Sekiban.Test.Postgres.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net8.0
     - name: Test dotnet tests/Sekiban.Test.Postgres .NET9
       run: |
         dotnet test tests/Sekiban.Test.Postgres/Sekiban.Test.Postgres.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net9.0
-    
+
+  regularIndexedDb:
+    strategy:
+      max-parallel: 4
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Setup .NET 8
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 8.0.x
+    - name: Setup .NET 9
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 9.0.x
+    - name: Restore dependencies
+      run: |
+        dotnet nuget add source -n benchmarknightly https://www.myget.org/F/benchmarkdotnet/api/v3/index.json
+        dotnet restore Sekiban.sln
+    - name: Test Build
+      run: |
+        dotnet build Sekiban.sln -c Release
+
+    - name: Test dotnet tests/Sekiban.Test.IndexedDb .NET8
+      run: |
+        dotnet test tests/Sekiban.Test.IndexedDb/Sekiban.Test.IndexedDb.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net8.0
+    - name: Test dotnet tests/Sekiban.Test.IndexedDb .NET9
+      run: |
+        dotnet test tests/Sekiban.Test.IndexedDb/Sekiban.Test.IndexedDb.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net9.0
+
   flaky:
     strategy:
       max-parallel: 4
 
     runs-on: ubuntu-latest
-    needs: [ regularMultitenant, regularPostgres,regularDynamo ,regular80Cosmos ]
+    needs: [ regularMultitenant, regularPostgres, regularDynamo, regularIndexedDb, regular80Cosmos ]
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET 8
@@ -497,7 +526,7 @@ jobs:
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTableDissolvable" "jjga_d_items_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTableDissolvable" "jjga_d_events_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3Region" "us-west-1"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"        
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"
     - name: Restore dependencies
       run: |
         dotnet nuget add source -n benchmarknightly https://www.myget.org/F/benchmarkdotnet/api/v3/index.json
@@ -516,7 +545,7 @@ jobs:
       max-parallel: 4
 
     runs-on: ubuntu-latest
-    needs: [ regularMultitenant, regularPostgres,regularDynamo ,regular90Cosmos ]
+    needs: [ regularMultitenant, regularPostgres, regularDynamo, regularIndexedDb, regular90Cosmos ]
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET 8
@@ -553,7 +582,7 @@ jobs:
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTableDissolvable" "jjga_d_items_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTableDissolvable" "jjga_d_events_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3Region" "us-west-1"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"        
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"
     - name: Restore dependencies
       run: |
         dotnet nuget add source -n benchmarknightly https://www.myget.org/F/benchmarkdotnet/api/v3/index.json
@@ -565,7 +594,7 @@ jobs:
         max_attempts: 3
         retry_on: error
         command: dotnet test Sekiban.sln  --filter "Category=Flaky" -v m -c Release -m:1 -f net9.0
-      
+
 
   performance80cosmos:
     strategy:
@@ -628,7 +657,7 @@ jobs:
     - name: Test dotnet
       run: |
         dotnet test tests/Sekiban.Test.CosmosDb/Sekiban.Test.CosmosDb.csproj  --filter "Category=Performance" -v m -c Release -m:1 -f net8.0
-      
+
   performance80dynamo:
     strategy:
       max-parallel: 4
@@ -665,7 +694,7 @@ jobs:
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTableDissolvable" "jjga_d_items_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTableDissolvable" "jjga_d_events_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3Region" "us-west-1"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"        
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"
     - name: Restore dependencies
       run: |
         dotnet nuget add source -n benchmarknightly https://www.myget.org/F/benchmarkdotnet/api/v3/index.json
@@ -717,7 +746,7 @@ jobs:
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTableDissolvable" "jjga_d_items_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTableDissolvable" "jjga_d_events_2"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3Region" "us-west-1"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"        
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"
     - name: Restore dependencies
       run: |
         dotnet nuget add source -n benchmarknightly https://www.myget.org/F/benchmarkdotnet/api/v3/index.json
@@ -725,7 +754,7 @@ jobs:
     - name: Test dotnet
       run: |
         dotnet test tests/Sekiban.Test.Dynamo/Sekiban.Test.Dynamo.csproj  --filter "Category=Performance" -v m -c Release -m:1 -f net9.0
-      
+
   performance80postgres:
     strategy:
       max-parallel: 4
@@ -755,7 +784,6 @@ jobs:
     - name: Test dotnet
       run: |
         dotnet test tests/Sekiban.Test.Postgres/Sekiban.Test.Postgres.csproj  --filter "Category=Performance" -v m -c Release -m:1 -f net8.0
-      
 
 
   performance90postgres:
@@ -787,4 +815,53 @@ jobs:
     - name: Test dotnet
       run: |
         dotnet test tests/Sekiban.Test.Postgres/Sekiban.Test.Postgres.csproj  --filter "Category=Performance" -v m -c Release -m:1 -f net9.0
-            
+
+
+  performance80IndexedDb:
+    strategy:
+      max-parallel: 4
+
+    runs-on: ubuntu-latest
+    needs: [ flaky ]
+    steps:
+    - uses: actions/checkout@v4
+    - name: Setup .NET 8
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 8.0.x
+    - name: Setup .NET 9
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 9.0.x
+    - name: Restore dependencies
+      run: |
+        dotnet nuget add source -n benchmarknightly https://www.myget.org/F/benchmarkdotnet/api/v3/index.json
+        dotnet restore Sekiban.sln
+    - name: Test dotnet
+      run: |
+        dotnet test tests/Sekiban.Test.IndexedDb/Sekiban.Test.IndexedDb.csproj  --filter "Category=Performance" -v m -c Release -m:1 -f net8.0
+
+
+  performance90IndexedDb:
+    strategy:
+      max-parallel: 4
+
+    runs-on: ubuntu-latest
+    needs: [ flaky90 ]
+    steps:
+    - uses: actions/checkout@v4
+    - name: Setup .NET 8
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 8.0.x
+    - name: Setup .NET 9
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 9.0.x
+    - name: Restore dependencies
+      run: |
+        dotnet nuget add source -n benchmarknightly https://www.myget.org/F/benchmarkdotnet/api/v3/index.json
+        dotnet restore Sekiban.sln
+    - name: Test dotnet
+      run: |
+        dotnet test tests/Sekiban.Test.IndexedDb/Sekiban.Test.IndexedDb.csproj  --filter "Category=Performance" -v m -c Release -m:1 -f net9.0
