--- a/Samples/Tutorials/OrleansSekiban/OrleansSekiban.Web/OrleansSekiban.Web.csproj
+++ b/Samples/Tutorials/OrleansSekiban/OrleansSekiban.Web/OrleansSekiban.Web.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OrleansSekiban.Domain\OrleansSekiban.Domain.csproj" />
     <ProjectReference Include="..\OrleansSekiban.ServiceDefaults\OrleansSekiban.ServiceDefaults.csproj" />
   </ItemGroup>
 
