--- a/Samples/Tutorials/OrleansSekiban/OrleansSekiban.ApiService/Properties/launchSettings.json
+++ b/Samples/Tutorials/OrleansSekiban/OrleansSekiban.ApiService/Properties/launchSettings.json
@@ -5,6 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
+      "launchUrl": "scalar/v1",
       "applicationUrl": "http://localhost:5349",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -14,6 +15,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
+      "launchUrl": "scalar/v1",
       "applicationUrl": "https://localhost:7370;http://localhost:5349",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
