--- a/src/Sekiban.Core.DotNet/Sekiban.Core.DotNet.csproj
+++ b/src/Sekiban.Core.DotNet/Sekiban.Core.DotNet.csproj
@@ -5,12 +5,12 @@
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
         <PackageId>Sekiban.Core.DotNet</PackageId>
-        <Version>0.23.0-preview3</Version>
+        <Version>0.23.1</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework Core</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>0.23.0-preview3</PackageVersion>
+        <PackageVersion>0.23.1</PackageVersion>
         <Description>Add Indexed DB as infrastructure</Description>
         <AssemblyName>Sekiban.Core.DotNet</AssemblyName>
         <RootNamespace>Sekiban.Core</RootNamespace>
@@ -34,7 +34,7 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="ResultBoxes" Version="0.3.29"/>
+        <PackageReference Include="ResultBoxes" Version="0.3.31" />
         <PackageReference Include="SharpZipLib" Version="1.4.2"/>
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
         <PackageReference Include="System.Runtime.InteropServices" Version="4.3.0"/>
