--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -3,7 +3,7 @@ name: Run Backend Regular Test
 on:
   workflow_dispatch:
   pull_request:
-    branches: [ main ]
+    branches: [ core_main ]
     paths:
       - "src/**"
       - "test/**"
