--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -50,13 +50,9 @@ jobs:
         pushd ./tests/Pure.Domain.xUnit
         dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "AccountEndpoint=https://cosmosdb:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRW1F2=="
         dotnet user-secrets set "ConnectionStrings:SekibanPostgresDefault" "Host=postgres;Port=5432;Database=mydb;Username=myuser;Password=mypassword;"
-    - name: Restore dependencies
-      run: |
-        dotnet nuget add source -n benchmarknightly https://www.myget.org/F/benchmarkdotnet/api/v3/index.json
-        dotnet restore Sekiban.sln
     - name: Test Build
       run: |
         dotnet build Sekiban.sln -c Release
-    - name: Test dotnet FeatureCheck .NET9
+    - name: dotnet test
       run: |
-        dotnet test tests/FeatureCheck.Test/FeatureCheck.Test.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net9.0
+        dotnet test -c Release -m:1
