--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -49,7 +49,7 @@ jobs:
       run: |
         pushd ./tests/Pure.Domain.xUnit
         dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "AccountEndpoint=https://cosmosdb:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRW1F2=="
-        dotnet user-secrets set "ConnectionStrings:SekibanPostgresDefault" "Host=postgres;Port=5432;Database=mydb;Username=myuser;Password=mypassword;"
+        dotnet user-secrets set "ConnectionStrings:SekibanPostgres" "Host=postgres;Port=5432;Database=mydb;Username=myuser;Password=mypassword;"
     - name: Test Build
       run: |
         dotnet build Sekiban.sln -c Release
