--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -29,6 +29,12 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+      cosmosdb:
+        image: mcr.microsoft.com/cosmosdb/linux/azure-cosmos-emulator:vnext-preview
+        ports:
+          - 8081:8081
+        env:
+          PROTOCOL: https
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET 9
@@ -38,7 +44,7 @@ jobs:
     - name: Secret Settings
       run: |
         pushd ./tests/Pure.Domain.xUnit
-        dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "AccountEndpoint=https://cosmosdb:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw=="
+        dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw=="
         dotnet user-secrets set "ConnectionStrings:SekibanPostgres" "Host=127.0.0.1;Port=5432;Database=mydb;Username=myuser;Password=mypassword;"
     - name: dotnet test
       run: |
