--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -44,13 +44,13 @@ jobs:
     - name: Export Cosmos DB Emulator Certificate
       run: |
         sudo apt update && sudo apt install -y openssl
-        openssl s_client -showcerts -connect localhost:8081 </dev/null | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' > cosmos_emulator.cert        
+        openssl s_client -connect localhost:8081 </dev/null | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' > cosmos_emulator.cert        
         sudo cp cosmos_emulator.cert /usr/local/share/ca-certificates/
         sudo update-ca-certificates
     - name: Secret Settings
       run: |
         pushd ./tests/Pure.Domain.xUnit
-        dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw=="
+        dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "AccountEndpoint=http://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw=="
         dotnet user-secrets set "ConnectionStrings:SekibanPostgres" "Host=127.0.0.1;Port=5432;Database=mydb;Username=myuser;Password=mypassword;"
     - name: dotnet test
       run: |
