--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -35,18 +35,15 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 9.0.x
-    - name: Export Cosmos DB Emulator Certificate
-      run: |
-        sudo apt update && sudo apt install -y openssl
-        openssl s_client -connect localhost:8081 </dev/null | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' > cosmos_emulator.cert        
-        sudo cp cosmos_emulator.cert /usr/local/share/ca-certificates/
-        sudo update-ca-certificates
     - name: Secret Settings
       run: |
         pushd ./tests/Pure.Domain.xUnit
         dotnet user-secrets set "Sekiban:Azure:CosmosDatabase" "GithubActionsPure"
         dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "${{ secrets.COSMOSDB_CONNECTION_STRING }}"
         dotnet user-secrets set "ConnectionStrings:SekibanPostgres" "Host=127.0.0.1;Port=5432;Database=mydb;Username=myuser;Password=mypassword;"
+    - name: dotnet build
+      run: |
+        dotnet build -c Release
     - name: dotnet test
       run: |
-        dotnet test -c Release
+        dotnet test -c Release --no-build --verbosity normal
