--- a/Samples/Tutorials/AspireEventSample/AspireEventSample.UnitTest/AspireEventSample.UnitTest.csproj
+++ b/Samples/Tutorials/AspireEventSample/AspireEventSample.UnitTest/AspireEventSample.UnitTest.csproj
@@ -11,10 +11,13 @@
         <PackageReference Include="coverlet.collector" Version="6.0.4"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0"/>
         <PackageReference Include="Microsoft.Orleans.Serialization.TestKit" Version="9.1.2"/>
-        <PackageReference Include="Sekiban.Pure.Orleans.xUnit" Version="1.0.0-preview7"/>
-        <PackageReference Include="Sekiban.Pure.xUnit" Version="1.0.0-preview7"/>
+        <PackageReference Include="Sekiban.Pure.Orleans.xUnit" Version="1.0.0-preview9" />
+        <PackageReference Include="Sekiban.Pure.xUnit" Version="1.0.0-preview9" />
         <PackageReference Include="xunit" Version="2.9.3"/>
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2"/>
+        <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
