--- a/Samples/Tutorials/OrleansSekiban/OrleansSekiban.AppHost/OrleansSekiban.AppHost.csproj
+++ b/Samples/Tutorials/OrleansSekiban/OrleansSekiban.AppHost/OrleansSekiban.AppHost.csproj
@@ -9,6 +9,7 @@
     <Nullable>enable</Nullable>
     <IsAspireHost>true</IsAspireHost>
   <IsPackable>true</IsPackable>
+  <UserSecretsId>ca9e087a-c53c-426c-b02d-065bfd129920</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,10 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.0.0" />
-    <PackageReference Include="Aspire.Hosting.Orleans" Version="9.0.0" />
-    <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.0.0" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.1.0" />
+    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.1.0" />
+    <PackageReference Include="Aspire.Hosting.Orleans" Version="9.1.0" />
+    <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.1.0" />
   </ItemGroup>
 
 </Project>
