--- a/Samples/Tutorials/AspireEventSample/AspireEventSample.ApiService/AspireEventSample.ApiService.csproj
+++ b/Samples/Tutorials/AspireEventSample/AspireEventSample.ApiService/AspireEventSample.ApiService.csproj
@@ -8,24 +8,34 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\AspireEventSample.MigrationHost\AspireEventSample.MigrationHost.csproj"/>
+        <ProjectReference Include="..\AspireEventSample.ReadModels\AspireEventSample.ReadModels.csproj"/>
         <ProjectReference Include="..\AspireEventSample.ServiceDefaults\AspireEventSample.ServiceDefaults.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Azure.Data.Tables" Version="9.1.0" />
-        <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.1.0" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3" />
-        <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="9.1.2" />
-        <PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="9.1.2" />
-        <PackageReference Include="Microsoft.Orleans.Persistence.Memory" Version="9.1.2" />
-        <PackageReference Include="Microsoft.Orleans.Server" Version="9.1.2" />
-        <PackageReference Include="Microsoft.Orleans.Streaming" Version="9.1.2" />
+        <PackageReference Include="Aspire.Azure.Data.Tables" Version="9.1.0"/>
+        <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.1.0"/>
+        <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.1.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.3">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="9.1.2"/>
+        <PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="9.1.2"/>
+        <PackageReference Include="Microsoft.Orleans.Persistence.Memory" Version="9.1.2"/>
+        <PackageReference Include="Microsoft.Orleans.Server" Version="9.1.2"/>
+        <PackageReference Include="Microsoft.Orleans.Streaming" Version="9.1.2"/>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4"/>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0"/>
         <PackageReference Include="OrleansDashboard" Version="8.2.0"/>
-        <PackageReference Include="Scalar.AspNetCore" Version="2.0.30" />
-        <PackageReference Include="Sekiban.Pure.CosmosDb" Version="1.0.0-preview9" />
-        <PackageReference Include="Sekiban.Pure.Orleans" Version="1.0.0-preview9" />
-        <PackageReference Include="Sekiban.Pure.Postgres" Version="1.0.0-preview9" />
-        <PackageReference Include="Sekiban.Pure.SourceGenerator" Version="1.0.0-preview9" />
+        <PackageReference Include="Scalar.AspNetCore" Version="2.0.30"/>
+        <PackageReference Include="Sekiban.Pure.CosmosDb" Version="1.0.0-preview9"/>
+        <PackageReference Include="Sekiban.Pure.Orleans" Version="1.0.0-preview9"/>
+        <PackageReference Include="Sekiban.Pure.Postgres" Version="1.0.0-preview9"/>
+        <PackageReference Include="Sekiban.Pure.SourceGenerator" Version="1.0.0-preview9"/>
     </ItemGroup>
 
 </Project>
