--- a/Samples/Tutorials/AspireEventSample/AspireEventSample.ReadModels/AspireEventSample.ReadModels.csproj
+++ b/Samples/Tutorials/AspireEventSample/AspireEventSample.ReadModels/AspireEventSample.ReadModels.csproj
@@ -2,13 +2,15 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4"/>
+        <PackageReference Include="Microsoft.Orleans.Core" Version="9.1.2"/>
+        <PackageReference Include="Sekiban.Pure.Orleans" Version="1.0.0-preview9"/>
     </ItemGroup>
 
 </Project>
